# Graphene

./: CMakeLists.txt  README.md  Window.cpp  Window.h  main.cpp
Math/: Graph.cpp  Graph.hpp  GraphPoint.cpp  GraphPoint.hpp
UI/: UIBar.cpp  UIBar.h  UIBarButton.cpp  UIBarButton.h  Window.cpp  Window.h  Window.hpp
UI/Bar/: UIBar.cpp  UIBar.h  UIBar.hpp  UIBarButton.cpp  UIBarButton.h  UIBarButton.hpp  UIBarFileButton.cpp  UIBarFileButton.h  UIBarFileButton.hpp
UI/Bar/Helpers/: FIleLoader.cpp  FIleLoader.h  FIleLoader.hpp
UI/Bar/UIHelpers/: ErrorWindow.cpp  ErrorWindow.hpp  Graph.cpp  Graph.h  GraphsController.cpp  GraphsController.hpp
UI/GraphUI/: GraphDisplay.cpp  GraphPoint.cpp  LaTeX.cpp  LaTeX.hpp
UI/Math/: CoordTable.cpp  CoordTable.hpp  Graph.cpp  Graph.hpp  GraphDisplay.cpp  GraphDisplay.hpp  GraphPoint.hpp
